possibly a fix for wrapping the filter

--- a/src/styles/_proj.scss
+++ b/src/styles/_proj.scss
@@ -83,4 +83,5 @@
 
 .filter {
     white-space: nowrap;
+    display: inline-block;
 }
